@@ -2,6 +2,8 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2017-03-25 	Richard Forth   Fixed some warnings and advisory messages not
+				being hidden when using --nowarn or --report oprtions.
 2017-03-25 	Richard Forth   Made the commands I think that are likely to
 				fail due to different locale settings run in 
 				en_GB.UTF-8 which doesnt affect system locale
